# sparklines

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml  release-plz.yml
src/: indexer.rs  lib.rs
src/indexer/: algorithmic.rs  rangemap.rs
