[package]
name = "sparklines"
description = "Sparklines library"
version = "0.0.0"
authors = ["Erwin Kroon <erwin@k3n.nl>"]
repository = "https://github.com/ekroon/sparklines"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
test-case = "2.2.2"
