[package]
name = "sparklines"
description = "Sparklines library"
version = "0.2.1"
authors = ["Erwin Kroon <erwin@k3n.nl>"]
repository = "https://github.com/ekroon/sparklines"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["rangemap"]
rangemap = ["dep:rangemap", "ordered-float"]

[dependencies]
ordered-float = { version = "3.4.0", optional = true }
rangemap = { version = "1.3.0", optional = true }

[dev-dependencies]
test-case = "2.2.2"
